--- a/index.html
+++ b/index.html
@@ -3,62 +3,92 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Univexity Public Takedown Board</title>
+<title>Univexity Takedown System</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <style>
-/* ===== BASE STYLES ===== */
+/* ===== BASE ===== */
 * { margin:0; padding:0; box-sizing:border-box; }
-body { font-family:'Roboto',sans-serif; background: linear-gradient(135deg,#0f172a,#1e293b); color:#f1f5f9; min-height:100vh; padding:20px; transition: background 0.5s; }
-a { color:#38bdf8; text-decoration:none; }
-a:hover { text-decoration:underline; }
-h1,h2 { font-family:'Montserrat',sans-serif; text-align:center; color:#3b82f6; text-shadow:0 0 10px #3b82f6; margin-bottom:20px; }
-h2 { font-size:2rem; margin-top:40px; }
+body { font-family:'Roboto',sans-serif; background: linear-gradient(135deg,#0f172a,#1e293b); color:#f1f5f9; min-height:100vh; transition: background 0.5s; }
 
-/* ===== ABOUT US ===== */
-#about { max-width:900px; margin:40px auto; background: rgba(30,41,59,0.95); padding:30px; border-radius:20px; box-shadow:0 10px 25px rgba(0,0,0,0.5); line-height:1.6; }
-#about p { margin-bottom:15px; font-size:1rem; }
+/* ===== NAVBAR ===== */
+nav { display:flex; justify-content:center; gap:25px; background: rgba(30,41,59,0.95); padding:15px 0; box-shadow:0 5px 15px rgba(0,0,0,0.5); position:sticky; top:0; z-index:1000; }
+nav a { color:#3b82f6; font-weight:700; text-decoration:none; font-size:1rem; transition:0.3s; }
+nav a:hover { color:#38bdf8; transform: scale(1.05); }
+
+/* ===== HEADER ===== */
+header { text-align:center; padding:50px 20px 20px; }
+header h1 { font-family:'Montserrat',sans-serif; font-size:3rem; color:#3b82f6; text-shadow:0 0 10px #3b82f6; }
+header p { margin-top:10px; font-size:1.2rem; color:#94a3b8; }
+
+/* ===== FORM ===== */
+main { display:flex; flex-direction:column; align-items:center; padding:20px; gap:30px; }
+form { background: rgba(30,41,59,0.95); padding:40px; border-radius:20px; width:100%; max-width:650px; box-shadow:0 15px 40px rgba(0,0,0,0.5); transition: transform 0.3s; }
+form:hover { transform: translateY(-5px); }
+form label { display:block; margin-top:15px; font-weight:700; color:#38bdf8; }
+form input { width:100%; padding:15px; margin-top:8px; border-radius:12px; border:none; font-size:1rem; background:#334155; color:#f1f5f9; transition:0.3s; }
+form input:focus { outline:2px solid #3b82f6; background:#1e293b; }
+form button { width:100%; padding:15px; margin-top:20px; border-radius:15px; border:none; background:#22c55e; font-weight:700; font-size:1.1rem; cursor:pointer; transition: all 0.3s; box-shadow:0 0 10px #22c55e; }
+form button:hover { background:#16a34a; transform: scale(1.05); box-shadow:0 0 20px #16a34a; }
+
+/* ===== ACTION BUTTONS ===== */
+.actionBtn { padding:15px 25px; border-radius:15px; font-weight:700; cursor:pointer; border:none; font-size:1.05rem; transition: transform 0.3s, box-shadow 0.3s; margin-top:10px; box-shadow:0 0 10px rgba(0,0,0,0.4); }
+.publicBtn { background:#3b82f6; color:#f1f5f9; }
+.publicBtn:hover { background:#2563eb; transform: scale(1.05); }
+.discordBtn { background:#7289da; color:#f1f5f9; }
+.discordBtn:hover { background:#5b6eae; transform: scale(1.05); }
 
 /* ===== REPORTS ===== */
-#reports { display:flex; flex-direction:column; gap:25px; max-width:900px; margin:0 auto; margin-top:30px; }
+#reports { display:flex; flex-direction:column; gap:25px; max-width:900px; margin:0 auto; }
 .report { background: rgba(30,41,59,0.95); padding:25px; border-radius:20px; box-shadow:0 10px 25px rgba(0,0,0,0.4); transition: transform 0.2s; position:relative; }
 .report:hover { transform: translateY(-5px); }
 .report b { color:#3b82f6; }
 .copyBtn { position:absolute; top:20px; right:20px; padding:8px 12px; background:#3b82f6; border:none; border-radius:12px; color:white; cursor:pointer; font-weight:700; transition: transform 0.2s, background 0.2s; }
 .copyBtn:hover { transform: scale(1.05); background:#2563eb; }
 
-/* ===== SCROLL TO TOP ===== */
+/* ===== SCROLL BUTTON ===== */
 #scrollTopBtn { position:fixed; bottom:30px; right:30px; padding:12px 16px; border-radius:50%; border:none; background:#3b82f6; color:white; cursor:pointer; box-shadow:0 0 15px #3b82f6; display:none; transition: transform 0.3s; }
 #scrollTopBtn:hover { transform: scale(1.1); }
-
-/* ===== HEADER ===== */
-header { text-align:center; padding:40px 20px 20px; }
-header h1 { font-size:3rem; margin-bottom:10px; }
-header p { color:#94a3b8; font-size:1.2rem; }
 </style>
 </head>
 <body>
 
+<!-- NAVBAR -->
+<nav>
+  <a href="https://univexity.github.io/" target="_blank">Public Board</a>
+  <a href="https://univexity.github.io/About%20us.html" target="_blank">About Us</a>
+  <a href="https://discord.gg/8wad3WGRgm" target="_blank">Discord</a>
+</nav>
+
 <header>
-  <h1>Univexity Public Takedown Board</h1>
-  <p>Helping creators protect their games from unfair copies.</p>
+  <h1>Univexity Takedown System</h1>
+  <p>Submit game copy reports and protect creators.</p>
 </header>
 
-<section id="about">
-  <h2>About Us</h2>
-  <p>Hi, my name is Univexity, and I created this platform with a simple mission: to help game creators protect their work. In the world of online gaming, copycats can appear quickly, and it is incredibly unfair to those who invest countless hours building unique experiences. This board serves as a transparent system where takedown requests can be tracked publicly, giving both visibility and accountability to the process.</p>
-  
-  <p>Game creation is a labor of love, requiring dedication, creativity, and passion. Unfortunately, when someone copies your game without permission, it diminishes your hard work and can demotivate even the most talented creators. I wanted to create a space that not only reports these incidents but also celebrates the original creators by ensuring they receive proper recognition and protection for their work.</p>
-  
-  <p>Through this system, you can submit a takedown request for any copied game you encounter, and it will appear publicly for all to see. The transparency of this board is essential; it allows the community to understand what has been reported, preventing repeated violations and encouraging fair play in the gaming ecosystem. By making submissions public, creators, moderators, and even players can all be aware of problematic copies.</p>
-  
-  <p>Our platform is built with simplicity in mind, but with powerful functionality. Each submission is stored securely, timestamps are tracked, and users can copy game links for easy reference. We also prioritize safety and transparency, ensuring that only genuine reports are submitted. Misuse of this system is strongly discouraged to maintain trust within the community.</p>
-  
-  <p>Beyond just reporting copies, this project reflects my personal belief in fairness and respect within the gaming world. I want every creator to feel supported and empowered, knowing there is a system that values their contributions. This board is more than just a tool—it’s a statement that originality matters, and hard work deserves recognition.</p>
-  
-  <p>Thank you for supporting this initiative. Whether you’re a creator submitting a report or a player learning about fairness, I hope this board fosters a healthier, more respectful gaming community. Together, we can make sure creativity is protected and that all games have the recognition they deserve.</p>
-</section>
+<main id="mainContent">
 
-<section id="reports-section">
+<!-- REPORT FORM -->
+<form id="takedownForm">
+  <label>Your Name</label>
+  <input type="text" id="reporterName" placeholder="Enter your name" required>
+
+  <label>Game Name</label>
+  <input type="text" id="gameName" placeholder="Name of the copied game" required>
+
+  <label>Game Link</label>
+  <input type="url" id="gameLink" placeholder="Meta link only (https://meta.com/...)" required>
+
+  <label>Original Game</label>
+  <input type="text" id="originalGame" placeholder="Original game name" required>
+
+  <button type="submit">Send Takedown Request</button>
+</form>
+
+<!-- ACTION BUTTONS -->
+<button class="actionBtn publicBtn" onclick="window.open('https://univexity.github.io/','_blank')">View Public Takedown Board</button>
+<button class="actionBtn discordBtn" onclick="window.open('https://discord.gg/8wad3WGRgm','_blank')">Join Our Discord</button>
+
+<!-- PUBLIC REPORTS -->
+<section id="reportsSection">
   <h2>Public Takedown Requests</h2>
   <div id="reports"></div>
 </section>
@@ -66,52 +96,69 @@ header p { color:#94a3b8; font-size:1.2rem; }
 <button id="scrollTopBtn" onclick="window.scrollTo({top:0,behavior:'smooth'})">⬆️</button>
 
 <script>
-// ===== LOAD REPORTS =====
+// ===== VARIABLES =====
 let reports = JSON.parse(localStorage.getItem("reports") || "[]");
+let currentUser = "";
+const form = document.getElementById("takedownForm");
 const reportsDiv = document.getElementById("reports");
+const scrollBtn = document.getElementById("scrollTopBtn");
 
+// ===== DISPLAY REPORTS =====
 function displayReports() {
   reportsDiv.innerHTML = "";
-  if(reports.length === 0) {
+  if(reports.length===0) {
     reportsDiv.innerHTML = "<p style='text-align:center;'>No takedown requests yet.</p>";
     return;
   }
-  
-  reports.forEach(report => {
-    const div = document.createElement("div");
-    div.className = "report";
-    div.innerHTML = `
+  reports.forEach(report=>{
+    const div=document.createElement("div");
+    div.className="report";
+    div.innerHTML=`
+      <b>Reporter:</b> ${report.reporter}<br>
       <b>Game Name:</b> ${report.gameName}<br>
       <b>Game Link:</b> <a href="${report.gameLink}" target="_blank">${report.gameLink}</a><br>
       <b>Original Game:</b> ${report.originalGame}<br>
       <b>Submitted:</b> ${report.timestamp || new Date().toLocaleString()}
     `;
-    const copyBtn = document.createElement("button");
-    copyBtn.textContent = "Copy Link";
-    copyBtn.className = "copyBtn";
-    copyBtn.onclick = () => { navigator.clipboard.writeText(report.gameLink); alert("Link copied!"); };
+    const copyBtn=document.createElement("button");
+    copyBtn.textContent="Copy Link";
+    copyBtn.className="copyBtn";
+    copyBtn.onclick=()=>{navigator.clipboard.writeText(report.gameLink); alert("Link copied!");};
     div.appendChild(copyBtn);
     reportsDiv.appendChild(div);
   });
 }
 
+// ===== FORM SUBMIT =====
+form.addEventListener("submit",(e)=>{
+  e.preventDefault();
+  const reporter=document.getElementById("reporterName").value.trim();
+  const gameName=document.getElementById("gameName").value.trim();
+  const gameLink=document.getElementById("gameLink").value.trim();
+  const originalGame=document.getElementById("originalGame").value.trim();
+
+  if(!gameLink.includes("meta.com")) { alert("Only Meta links allowed!"); return; }
+  if(!reporter||!gameName||!gameLink||!originalGame) return;
+
+  const report={reporter,gameName,gameLink,originalGame,timestamp:new Date().toLocaleString()};
+  reports.push(report);
+  localStorage.setItem("reports",JSON.stringify(reports));
+  currentUser=reporter;
+  displayReports();
+  alert("Takedown request submitted!");
+  form.reset();
+});
+
 // ===== SCROLL BUTTON =====
-const scrollBtn = document.getElementById("scrollTopBtn");
-window.addEventListener('scroll', () => { scrollBtn.style.display = window.scrollY > 300 ? 'block' : 'none'; });
+window.addEventListener('scroll',()=>{scrollBtn.style.display=window.scrollY>300?'block':'none';});
 
 // ===== INITIAL DISPLAY =====
 displayReports();
 
-// ===== EASTER EGG =====
-let secretCount = 0;
-document.addEventListener('keydown', e => {
-  if(e.key.toLowerCase() === 'u') { 
-    secretCount++; 
-    if(secretCount === 5) { 
-      alert("🎉 Secret Univexity Easter Egg Activated!"); 
-      secretCount = 0; 
-    } 
-  }
+// ===== EASTER EGG (Shift + U) =====
+let secretCount=0;
+document.addEventListener('keydown',e=>{
+  if(e.key==='U' && e.shiftKey){ secretCount++; if(secretCount===5){ alert("🎉 Secret Univexity Easter Egg Activated!"); secretCount=0; } }
 });
 </script>
 
